--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-docx==0.2.4
-sentence-transformers==2.2.0
-torch==1.10.0
-transformers==4.13.0
+ttkbootstrap==1.6.0
+requests==2.26.0
+python-docx==0.8.11
+PyPDF2==1.26.0
